--- a/main/pom.xml
+++ b/main/pom.xml
@@ -41,11 +41,11 @@
                 <artifactId>liquibase-maven-plugin</artifactId>
                 <version>4.15.0</version>
                 <configuration>
-                    <propertyFile>src/main/resources/liquibase.properties</propertyFile>
+                    <propertyFile>src/main/resources/liquibase/liquibase.properties</propertyFile>
                 </configuration>
                 <executions>
                     <execution>
-                        <phase>install</phase>
+                        <phase>process-resources</phase>
                         <goals>
                             <goal>update</goal>
                         </goals>
