--- a/Senla_Intensive_3/main/pom.xml
+++ b/Senla_Intensive_3/main/pom.xml
@@ -33,6 +33,16 @@
             <artifactId>liquibase-core</artifactId>
             <version>4.15.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>6.1.11</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>6.1.11</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
