--- a/Senla_Intensive_3/main/pom.xml
+++ b/Senla_Intensive_3/main/pom.xml
@@ -43,6 +43,12 @@
             <artifactId>spring-context</artifactId>
             <version>6.1.11</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.17.1</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
