--- a/Senla_Intensive_3/main/pom.xml
+++ b/Senla_Intensive_3/main/pom.xml
@@ -73,6 +73,12 @@
             <artifactId>aspectjweaver</artifactId>
             <version>1.9.20.1</version>
         </dependency>
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+
 
     </dependencies>
     <build>
