Added Spring_web for task #7

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
 # Database connection properties
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/senla_hr_dep
 spring.datasource.username=postgres
 spring.datasource.password=brest125
+
+#Hibernate properties
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 
 # Liquibase properties
