--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,9 @@ spring.jpa.hibernate.ddl-auto=create-drop
 
 # Liquibase properties
 liquibase.change-log=db/changelog-master.xml
+
+# Secret key
+jwt.secret.key=yourVeryVerySecretKey12345678yourVeryVerySecretKey
+
+#Token validity period
+jwt.expiration.time=86400000
